--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "gh-pages": "^1.1.0",
+    "material-ui": "^0.20.0",
     "typescript": "^2.7.1"
   }
 }
