--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "@types/jest": "^22.1.2",
-    "@types/node": "^4.0.36",
+    "@types/material-ui": "^0.20.5",
+    "@types/node": "^4.2.23",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "gh-pages": "^1.1.0",
