--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "konva": "^1.7.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-konva": "^1.6.6",
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.13.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -22,6 +27,8 @@
     "@types/node": "^4.2.23",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.15",
+    "@types/redux-logger": "^3.0.5",
     "gh-pages": "^1.1.0",
     "material-ui": "^0.20.0",
     "tslint": "^5.9.1",
