--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "ci-test": "cross-env CI=true react-scripts-ts test --env=jsdom",
+    "ci-test": "cross-env CI=true react-scripts-ts test --env=jsdom --forceExit",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "predeploy": "npm run build",
-    "deploy": "cross-env CI=true react-scripts-ts test --env=jsdom & gh-pages -d build"
+    "deploy": "cross-env CI=true react-scripts-ts test --env=jsdom --forceExit & gh-pages -d build"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx,json,css}": [
