updated myMatches and addMatches UI

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/prop-types": "^15.5.2",
     "konva": "^1.7.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
