--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/prop-types": "^15.5.2",
     "konva": "^1.7.6",
+    "raven-js": "^3.24.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-konva": "^1.6.6",
