--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "material-ui": "^0.20.0",
     "prettier": "^1.10.2",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "webrtc-adapter": "^6.1.4"
   }
 }
