--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@types/prop-types": "^15.5.2",
+    "@types/react-select": "^1.2.6",
     "konva": "^1.7.6",
     "raven-js": "^3.24.0",
     "react": "^16.3.1",
@@ -14,6 +15,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
+    "react-select": "^1.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6"
   },
@@ -47,6 +49,7 @@
     "@types/react-redux": "^5.0.15",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-select": "^1.2.6",
     "@types/redux-logger": "^3.0.5",
     "cross-env": "^5.1.4",
     "gh-pages": "^1.1.0",
