--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 .env.test.local
 .env.production.local
 
-/src/sentry-release.json
+src/sentry-release.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
