--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts-ts start",
-    "build": "echo-cli '{\"releaseVersion\": \"' $(sentry-cli releases -o zibiga -p gameportal propose-version) '\"}' > src/sentry-config.json & react-scripts-ts build",
+    "build": "node write-sentry-version.js & react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "predeploy": "npm run build",
@@ -50,7 +50,6 @@
     "@types/react-router-dom": "^4.2.6",
     "@types/redux-logger": "^3.0.5",
     "cross-env": "^5.1.4",
-    "echo-cli": "^1.0.8",
     "gh-pages": "^1.1.0",
     "husky": "^0.15.0-rc.13",
     "lint-staged": "^7.0.4",
