--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "konva": "^2.0.0",
     "raven-js": "^3.24.0",
     "react": "^16.3.1",
+    "react-dice": "^1.0.1",
     "react-dom": "^16.3.1",
     "react-konva": "^1.7.1",
     "react-redux": "^5.0.7",
