--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
-    "allowJs": true,
-    "checkJs": true,
+    "allowJs": false,
+    "checkJs": false,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
