--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "newLine": "CRLF",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["es2017.object", "es6", "dom"],
     "sourceMap": true,
     "allowJs": false,
     "checkJs": false,
