--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "rootDir": "src",
     "baseUrl": ".",
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "alwaysStrict": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
