--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
