--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx,json,css}": [
-      "prettier --single-quote --write",
+      "prettier --print-width 100 --single-quote --write",
       "git add"
     ]
   },
